crates/biome_cli/tests/snapshots/main_cases_handle_css_files/no_undeclared_styles_shows_checked_import_chain.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `Button.jsx`

```jsx
import "./button.css";
export default () => <button className="btn btn-undefined">Click</button>;
```

## `button.css`

```css
.btn {
  background: blue;
}
.btn-primary {
  color: white;
}
```

# Emitted Messages

```block
Button.jsx:2:45 lint/nursery/noUndeclaredStyles ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The CSS class btn-undefined is not defined in any imported stylesheet.
  
    1 │ import "./button.css";
  > 2 │ export default () => <button className="btn btn-undefined">Click</button>;
      │                                             ^^^^^^^^^^^^^
  
  i Referencing undefined classes often indicates a typo or a missing stylesheet, and will result in elements not being styled as intended.
  
  i Checked import tree:
    
    <TEMP_DIR>/no_undeclared_styles_shows_checked_import_chain/Button.jsx (this file)
      └─ imports <TEMP_DIR>/no_undeclared_styles_shows_checked_import_chain/button.css
  
  
  i Either import a CSS file that defines this class or remove this class name.
  
  i This rule is still being actively worked on, so it may be missing features or have rough edges. Visit https://github.com/biomejs/biome/issues/9156 for more information or to report possible bugs.
  
  i This rule belongs to the nursery group, which means it is not yet stable and may change in the future. Visit https://biomejs.dev/linter/#nursery for more information.
  

```

```block
Checked 2 files in <TIME>. No fixes applied.
Found 1 info.
```
