crates/biome_cli/tests/snapshots/main_cases_handle_css_files/no_unused_classes_component_hierarchy_nested_three_levels.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --only=nursery/noUnusedClasses '<TEMP_DIR>/no_unused_classes_component_hierarchy_nested_three_levels'
```

## `App.jsx`

```jsx
import "./styles.css";
import Page from "./Page.jsx";
export default () => <Page />;

```

## `Button.jsx`

```jsx
export default () => <button className="btn">Click</button>;
```

## `Page.jsx`

```jsx
import Button from "./Button.jsx";
export default () => <div className="container"><Button /></div>;

```

## `styles.css`

```css
.container {
  width: 100%;
}
.btn {
  padding: 8px;
}
```

# Emitted Messages

```block
Checked 4 files in <TIME>. No fixes applied.
```
