crates/biome_cli/tests/snapshots/main_cases_handle_css_files/no_unused_classes_transitive_css_import.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --only=nursery/noUnusedClasses '<TEMP_DIR>/no_unused_classes_transitive_css_import'
```

## `App.jsx`

```jsx
import "./theme.css";
export default () => <div className="base theme" />;

```

## `base.css`

```css
.base {
  box-sizing: border-box;
}
```

## `theme.css`

```css
@import "./base.css";
.theme {
  background: white;
}
```

# Emitted Messages

```block
Checked 3 files in <TIME>. No fixes applied.
```
